HTML, CSS, Assets
Added KEB logo

HTML : Header and intro section code

CSS: Header style + intro style beginning

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DWMA project</title>
+  <title>Who We Are - KEB</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -10,14 +10,35 @@
   <!-- Favicon -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/app.css">
 
   <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
-  <img src="assets/images/logo-heaj.png">
-  <h1>Hello world</h1>
+  <header hidden>
+    <nav>
+      <ul>
+        <li class="active"><a href="#">WHO WE ARE</a></li>
+        <li><a href="#">OUR FIGHT</a></li>
+        <li><a href="#">YOUR ROLE</a></li>
+        <li><a href="#">AGENDA</a></li>
+        <li class="join"><a href="#">JOIN US</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="intro">
+      <h1 class="title intro__title">KEB</h1>
+      <div class="intro__background"></div>
+      <h2 class="title intro__subtitle">KILL E-BEES</h2>
+    </section>
+  </main>
 
 </body>
 </html>
