--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,27 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/app.css">
 
   <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
-  <header hidden>
+  <header class="hidden">
+
+    <div class="header__quit">
+      <img src="./assets/images/quit-button.svg" alt="Quit burger menu">
+    </div>
+
     <nav>
       <ul>
         <li class="active"><a href="#">WHO WE ARE</a></li>
-        <li><a href="#">OUR FIGHT</a></li>
-        <li><a href="#">YOUR ROLE</a></li>
+        <li><a href="ourfight.html">OUR FIGHT</a></li>
+        <li><a href="yourjob.html">YOUR ROLE</a></li>
         <li><a href="#">AGENDA</a></li>
         <li class="join"><a href="#">JOIN US</a></li>
       </ul>
@@ -33,11 +42,32 @@
   </header>
 
   <main>
+
+    <div class="transition hidden"></div>
+
+    <div class="burger">
+      <img src="./assets/images/burger-menu.svg" alt="Burger Menu button">
+    </div>
+
     <section class="intro">
       <h1 class="title intro__title">KEB</h1>
       <div class="intro__background"></div>
       <h2 class="title intro__subtitle">KILL E-BEES</h2>
     </section>
+
+    <section class="keb__section whoweare">
+      <div class="sectionHeader whoweare__header">
+        <h3 class="subtitle whoweare__title">WHO WE ARE</h3>
+      </div>
+
+      <div class="explaination whoweare__explaination">
+        <p class="paragraph whoweare__paragraph">KEB is a movement for people who’ve had enough of the lies, of the machines and of watching real bees vanish and getting replaced by metal fakes.</p>
+        <p class="paragraph whoweare__paragraph">Since 2034, e-bees were sold to us as saviors of the environment, as the real bees were going extinct. But they aren’t anymore what they were. They are corrupted.</p>
+        <p class="paragraph whoweare__paragraph">We were fooled at first, thinking these robots could save the planet. But we were proven wrong. Reports and witnesses of glitching, stalking, killing, spying. We knew then that they were a threat.</p>
+        <p class="paragraph whoweare__paragraph">KEB can count on nearly 2 million members. Most of them on the street manifesting or propagating. But others, hidden in the shadows, hack, sabotage, infiltrate. They take actions instead of waiting.</p>
+      </div>
+    </section>
+
   </main>
 
 </body>
