Assets, HTML, CSS, JS, JSON
Assets: more images + edited names for images

JSON: added a JSON for "Your Role" section

HTML: remove span

CSS: Style for the "OIur Fight" slider

JS: Code for "Our Fight" slider (ScrollTrigger)

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,14 @@
 
       <div class="explaination whoweare__explaination">
         <p class="paragraph whoweare__paragraph">KEB is a movement for people who’ve had enough of the lies, of the machines and of watching real bees vanish and getting replaced by metal fakes.</p>
+
+        <img src="assets/images/intro/ebee.jpg" alt="EBEE logo">
+        <img src="assets/images/intro/hive.jpg" alt="EBEEs hive">
         <p class="paragraph whoweare__paragraph">Since 2034, e-bees were sold to us as saviors of the environment, as the real bees were going extinct. But they aren’t anymore what they were. They are corrupted.</p>
+
+        <img src="assets/images/intro/1.jpg" alt="EBEEs invasion">
         <p class="paragraph whoweare__paragraph">We were fooled at first, thinking these robots could save the planet. But we were proven wrong. Reports and witnesses of glitching, stalking, killing, spying. We knew then that they were a threat.</p>
+        
         <p class="paragraph whoweare__paragraph">KEB can count on nearly 2 million members. Most of them on the street manifesting or propagating. But others, hidden in the shadows, hack, sabotage, infiltrate. They take actions instead of waiting.</p>
       </div>
     </section>
