--- a/src/yourjob.html
+++ b/src/yourjob.html
@@ -66,8 +66,13 @@
 
             <div class="explaination manifesting__explaination">
                 <p class="paragraph manifesting__paragraph">If you’re not a tech genius or a risky person, it’s alright. You just need a voice.</p>
+
+                <img src="assets/images/role/manifesting/1.jpg" alt="">
+                <img src="assets/images/role/manifesting/2.jpg" alt="">
                 <p class="paragraph manifesting__paragraph">As a manifester, you go out months after months, reasoning people, telling the truth.</p>
                 <p class="paragraph manifesting__paragraph">You may not have drones or a lot of tech knowledge, but you’re a real warrior, and you’re part of the 75% of people that compose our members. Each new voice puts more pressure onto the government.</p>
+
+                <img src="assets/images/role/manifesting/3.jpg" alt="">
                 <p class="paragraph manifesting__paragraph">You go to protests, fairs, conferences. Turn your voice into a weapon. You propagate our ideas. People need to wake up and see the truth.</p>
             </div>
         </section>
@@ -79,8 +84,13 @@
 
             <div class="explaination observing__explaination">
                 <p class="paragraph observing__paragraph">If you want to do a bit more than manifesting, you could be one of our spies.</p>
+
+                <img src="assets/images/role/observing/1.jpg" alt="">
+                <img src="assets/images/role/observing/2.jpg" alt="">
                 <p class="paragraph observing__paragraph">You could be an observer. You spot, you track and you report through our APIDETECT network.</p>
                 <p class="paragraph observing__paragraph">If you think people around a hive are in danger, you must also call the authorities.</p>
+
+                <img src="assets/images/role/observing/3.jpg" alt="">
                 <p class="paragraph observing__paragraph">If you want a more direct contact, join our product team. You go to member’s houses and sell them our anti E-BEES product.</p>
             </div>
         </section>
@@ -92,7 +102,12 @@
 
             <div class="explaination hacking__explaination">
                 <p class="paragraph hacking__paragraph">If you’ve got advanced tech skills, you’re welcome into the Hacking Team.</p>
+
+                <img src="assets/images/role/hacking/1.jpg" alt="">
                 <p class="paragraph hacking__paragraph">Your role is to sabotage those hives and bees. Send signals, mess with their code. You crack them open and make them numb. You also build defense devices for people.</p>
+
+                <img src="assets/images/role/hacking/3.jpg" alt="">
+                <img src="assets/images/role/hacking/2.jpg" alt="">
                 <p class="paragraph hacking__paragraph">And you’re really good at this, hijack a bee. Make it yours. Turn it into a weapon that spreads into their hives.</p>
             </div>
         </section>
@@ -105,7 +120,12 @@
             <div class="explaination infiltrating__explaination">
                 <p class="paragraph infiltrating__paragraph">Finally, if you do not fear authorities and illegal activities. Join the Infiltration Team.</p>
                 <p class="paragraph infiltrating__paragraph">As the risk of this job is high, you decide whenever and wherever you do this activity. There’s no rule.</p>
+
+                <img src="assets/images/role/infiltrating/1.jpg" alt="">
+                <img src="assets/images/role/infiltrating/2.jpg" alt="">
                 <p class="paragraph infiltrating__paragraph">As an Infiltrator, you set traps, you destroy them with your bare hands or with weapons.</p>
+
+                <img src="assets/images/role/infiltrating/3.jpg" alt="">
                 <p class="paragraph infiltrating__paragraph">But if you want to go further, you infiltrate mega corporations and sabotage. Leak data, expose them. Make an impact on the world.</p>
             </div>
         </section>
