--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
         <li class="active"><a href="#">WHO WE ARE</a></li>
         <li><a href="ourfight.html">OUR FIGHT</a></li>
         <li><a href="yourjob.html">YOUR ROLE</a></li>
-        <li><a href="#">AGENDA</a></li>
-        <li class="join"><a href="#">JOIN US</a></li>
+        <li><a href="agenda.html">AGENDA</a></li>
+        <li class="join"><a href="joinus.html">JOIN US</a></li>
       </ul>
     </nav>
   </header>
@@ -58,16 +58,26 @@
     <section class="keb__section whoweare">
       <div class="sectionHeader whoweare__header">
         <h3 class="subtitle whoweare__title">WHO WE ARE</h3>
+
+        <div class="keb__images hidden">
+          <img class="keb__images--1" src="assets/images/intro/ebee.jpg" alt="EBEE logo">
+          <img  src="assets/images/intro/hive.jpg" alt="EBEEs hive">
+          <img  src="assets/images/intro/1.jpg" alt="EBEEs invasion">
+        </div>
       </div>
 
       <div class="explaination whoweare__explaination">
         <p class="paragraph whoweare__paragraph">KEB is a movement for people who’ve had enough of the lies, of the machines and of watching real bees vanish and getting replaced by metal fakes.</p>
-
-        <img src="assets/images/intro/ebee.jpg" alt="EBEE logo">
-        <img src="assets/images/intro/hive.jpg" alt="EBEEs hive">
+        
+        <div class="explaination__images">
+          <img src="assets/images/intro/ebee.jpg" alt="EBEE logo">
+          <img src="assets/images/intro/hive.jpg" alt="EBEEs hive">
+        </div>
         <p class="paragraph whoweare__paragraph">Since 2034, e-bees were sold to us as saviors of the environment, as the real bees were going extinct. But they aren’t anymore what they were. They are corrupted.</p>
 
-        <img src="assets/images/intro/1.jpg" alt="EBEEs invasion">
+        <div class="explaination__images">
+          <img src="assets/images/intro/1.jpg" alt="EBEEs invasion">
+        </div>
         <p class="paragraph whoweare__paragraph">We were fooled at first, thinking these robots could save the planet. But we were proven wrong. Reports and witnesses of glitching, stalking, killing, spying. We knew then that they were a threat.</p>
         
         <p class="paragraph whoweare__paragraph">KEB can count on nearly 2 million members. Most of them on the street manifesting or propagating. But others, hidden in the shadows, hack, sabotage, infiltrate. They take actions instead of waiting.</p>
