--- a/src/ourfight.html
+++ b/src/ourfight.html
@@ -35,8 +35,8 @@
                 <li><a href="index.html">WHO WE ARE</a></li>
                 <li class="active"><a href="#">OUR FIGHT</a></li>
                 <li><a href="yourjob.html">YOUR ROLE</a></li>
-                <li><a href="#">AGENDA</a></li>
-                <li class="join"><a href="#">JOIN US</a></li>
+                <li><a href="agenda.html">AGENDA</a></li>
+                <li class="join"><a href="joinus.html">JOIN US</a></li>
             </ul>
         </nav>
     </header>
