Assets, JSON, HTML, CSS, JS
Compressed all images + srcset

JSON : added srcset + fixed path to images

HTML: srcset

CSS: fixed form in display:grid

JS: Fixed path to JSON + srcset

--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,9 @@
         <h3 class="subtitle whoweare__title">WHO WE ARE</h3>
 
         <div class="keb__images hidden">
-          <img class="keb__images--1" src="assets/images/intro/ebee.jpg" alt="EBEE logo">
-          <img  src="assets/images/intro/hive.jpg" alt="EBEEs hive">
-          <img  src="assets/images/intro/1.jpg" alt="EBEEs invasion">
+          <img class="keb__images--1" src="assets/images/intro/ebee.jpg" alt="EBEE logo" srcset="assets/images/@2x/intro/ebee@2x.jpg 2x">
+          <img  src="assets/images/intro/hive.jpg" alt="EBEEs hive" srcset="assets/images/@2x/intro/hive@2x.jpg 2x">
+          <img  src="assets/images/intro/1.jpg" alt="EBEEs invasion" srcset="assets/images/@2x/intro/1@2x.jpg 2x">
         </div>
       </div>
 
@@ -70,13 +70,13 @@
         <p class="paragraph whoweare__paragraph">KEB is a movement for people who’ve had enough of the lies, of the machines and of watching real bees vanish and getting replaced by metal fakes.</p>
         
         <div class="explaination__images">
-          <img src="assets/images/intro/ebee.jpg" alt="EBEE logo">
-          <img src="assets/images/intro/hive.jpg" alt="EBEEs hive">
+          <img src="assets/images/intro/ebee.jpg" alt="EBEE logo" srcset="assets/images/@2x/intro/ebee@2x.jpg 2x">
+          <img src="assets/images/intro/hive.jpg" alt="EBEEs hive" srcset="assets/images/@2x/intro/hive@2x.jpg 2x">
         </div>
         <p class="paragraph whoweare__paragraph">Since 2034, e-bees were sold to us as saviors of the environment, as the real bees were going extinct. But they aren’t anymore what they were. They are corrupted.</p>
 
         <div class="explaination__images">
-          <img src="assets/images/intro/1.jpg" alt="EBEEs invasion">
+          <img src="assets/images/intro/1.jpg" alt="EBEEs invasion" srcset="assets/images/@2x/intro/1@2x.jpg 2x">
         </div>
         <p class="paragraph whoweare__paragraph">We were fooled at first, thinking these robots could save the planet. But we were proven wrong. Reports and witnesses of glitching, stalking, killing, spying. We knew then that they were a threat.</p>
         
