--- a/src/yourjob.html
+++ b/src/yourjob.html
@@ -64,9 +64,9 @@
                 <h3 class="subtitle subsubtitle manifesting__title">1. MANIFESTING</h3>
 
                 <div class="keb__images hidden">
-                    <img src="assets/images/role/manifesting/1.jpg" alt="">
-                    <img src="assets/images/role/manifesting/2.jpg" alt="">
-                    <img src="assets/images/role/manifesting/3.jpg" alt="">
+                    <img src="assets/images/role/manifesting/1.jpg" alt="People manifesting in front of Senate" srcset="assets/images/@2x/role/manifesting/1@2x.jpg 2x">
+                    <img src="assets/images/role/manifesting/2.jpg" alt="People manifesting on a road" srcset="assets/images/@2x/role/manifesting/2@2x.jpg 2x">
+                    <img src="assets/images/role/manifesting/3.jpg" alt="People propagating KEB ideas" srcset="assets/images/@2x/role/manifesting/3@2x.jpg 2x">
                 </div>
             </div>
 
@@ -74,14 +74,14 @@
                 <p class="paragraph manifesting__paragraph">If you’re not a tech genius or a risky person, it’s alright. You just need a voice.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/manifesting/1.jpg" alt="">
-                    <img src="assets/images/role/manifesting/2.jpg" alt="">
+                    <img src="assets/images/role/manifesting/1.jpg" alt="People manifesting in front of Senate" srcset="assets/images/@2x/role/manifesting/1@2x.jpg 2x">
+                    <img src="assets/images/role/manifesting/2.jpg" alt="People manifesting on a road" srcset="assets/images/@2x/role/manifesting/2@2x.jpg 2x">
                 </div>
                 <p class="paragraph manifesting__paragraph">As a manifester, you go out months after months, reasoning people, telling the truth.</p>
                 <p class="paragraph manifesting__paragraph">You may not have drones or a lot of tech knowledge, but you’re a real warrior, and you’re part of the 75% of people that compose our members. Each new voice puts more pressure onto the government.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/manifesting/3.jpg" alt="">
+                    <img src="assets/images/role/manifesting/3.jpg" alt="People propagating KEB ideas" srcset="assets/images/@2x/role/manifesting/3@2x.jpg 2x">
                 </div>
                 <p class="paragraph manifesting__paragraph">You go to protests, fairs, conferences. Turn your voice into a weapon. You propagate our ideas. People need to wake up and see the truth.</p>
             </div>
@@ -92,9 +92,9 @@
                 <h3 class="subtitle subsubtitle observing__title">2. OBSERVING</h3>
 
                 <div class="keb__images hidden">
-                    <img src="assets/images/role/observing/1.jpg" alt="">
-                    <img src="assets/images/role/observing/2.jpg" alt="">
-                    <img src="assets/images/role/observing/3.jpg" alt="">
+                    <img src="assets/images/role/observing/1.jpg" alt="Someone observing a robotic bee hive" srcset="assets/images/@2x/role/observing/1@2x.jpg 2x">
+                    <img src="assets/images/role/observing/2.jpg" alt="Someone reporting a hive through our APIDETECT app" srcset="assets/images/@2x/role/observing/2@2x.jpg 2x">
+                    <img src="assets/images/role/observing/3.jpg" alt="Someone selling one of the KEB products to someone else" srcset="assets/images/@2x/role/observing/3@2x.jpg 2x">
                 </div>
             </div>
 
@@ -102,14 +102,14 @@
                 <p class="paragraph observing__paragraph">If you want to do a bit more than manifesting, you could be one of our spies.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/observing/1.jpg" alt="">
-                    <img src="assets/images/role/observing/2.jpg" alt="">
+                    <img src="assets/images/role/observing/1.jpg" alt="Someone observing a robotic bee hive" srcset="assets/images/@2x/role/observing/1@2x.jpg 2x">
+                    <img src="assets/images/role/observing/2.jpg" alt="Someone reporting a hive through our APIDETECT app" srcset="assets/images/@2x/role/observing/2@2x.jpg 2x">
                 </div>
                 <p class="paragraph observing__paragraph">You could be an observer. You spot, you track and you report through our APIDETECT network.</p>
                 <p class="paragraph observing__paragraph">If you think people around a hive are in danger, you must also call the authorities.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/observing/3.jpg" alt="">
+                    <img src="assets/images/role/observing/3.jpg" alt="Someone selling one of the KEB products to someone else" srcset="assets/images/@2x/role/observing/3@2x.jpg 2x">
                 </div>
                 <p class="paragraph observing__paragraph">If you want a more direct contact, join our product team. You go to member’s houses and sell them our anti E-BEES product.</p>
             </div>
@@ -120,9 +120,9 @@
                 <h3 class="subtitle subsubtitle hacking__title">3. HACKING</h3>
 
                 <div class="keb__images hidden">
-                    <img src="assets/images/role/hacking/1.jpg" alt="">
-                    <img src="assets/images/role/hacking/3.jpg" alt="">
-                    <img src="assets/images/role/hacking/2.jpg" alt="">
+                    <img src="assets/images/role/hacking/1.jpg" alt="Someone hacking a robotic bee with his phone" srcset="assets/images/@2x/role/hacking/1@2x.jpg 2x">
+                    <img src="assets/images/role/hacking/3.jpg" alt="A hacked bee infesting a robotic bee hive" srcset="assets/images/@2x/role/hacking/3@2x.jpg 2x">
+                    <img src="assets/images/role/hacking/2.jpg" alt="Someone changing the pieces of a robotic bee to make it his" srcset="assets/images/@2x/role/hacking/2@2x.jpg 2x">
                 </div>
             </div>
 
@@ -130,13 +130,13 @@
                 <p class="paragraph hacking__paragraph">If you’ve got advanced tech skills, you’re welcome into the Hacking Team.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/hacking/1.jpg" alt="">
+                    <img src="assets/images/role/hacking/1.jpg" alt="Someone hacking a robotic bee with his phone" srcset="assets/images/@2x/role/hacking/1@2x.jpg 2x">
                 </div>
                 <p class="paragraph hacking__paragraph">Your role is to sabotage those hives and bees. Send signals, mess with their code. You crack them open and make them numb. You also build defense devices for people.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/hacking/3.jpg" alt="">
-                    <img src="assets/images/role/hacking/2.jpg" alt="">
+                    <img src="assets/images/role/hacking/3.jpg" alt="A hacked bee infesting a robotic bee hive" srcset="assets/images/@2x/role/hacking/3@2x.jpg 2x">
+                    <img src="assets/images/role/hacking/2.jpg" alt="Someone changing the pieces of a robotic bee to make it his" srcset="assets/images/@2x/role/hacking/2@2x.jpg 2x">
                 </div>
                 <p class="paragraph hacking__paragraph">And you’re really good at this, hijack a bee. Make it yours. Turn it into a weapon that spreads into their hives.</p>
             </div>
@@ -147,9 +147,9 @@
                 <h3 class="subtitle subsubtitle infiltrating__title">4. INFILTRATING</h3>
 
                 <div class="keb__images hidden">
-                    <img src="assets/images/role/infiltrating/1.jpg" alt="">
-                    <img src="assets/images/role/infiltrating/2.jpg" alt="">
-                    <img src="assets/images/role/infiltrating/3.jpg" alt="">
+                    <img src="assets/images/role/infiltrating/1.jpg" alt="A robotic bee getting into a trap" srcset="assets/images/@2x/role/infiltrating/1@2x.jpg 2x">
+                    <img src="assets/images/role/infiltrating/2.jpg" alt="Someone punching and destroying a robotic bee" srcset="assets/images/@2x/role/infiltrating/2@2x.jpg 2x">
+                    <img src="assets/images/role/infiltrating/3.jpg" alt="Someone infiltrating a mega corporation of robotic bee and leaking data" srcset="assets/images/@2x/role/infiltrating/3@2x.jpg 2x">
                 </div>
             </div>
 
@@ -158,13 +158,13 @@
                 <p class="paragraph infiltrating__paragraph">As the risk of this job is high, you decide whenever and wherever you do this activity. There’s no rule.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/infiltrating/1.jpg" alt="">
-                    <img src="assets/images/role/infiltrating/2.jpg" alt="">
+                    <img src="assets/images/role/infiltrating/1.jpg" alt="A robotic bee getting into a trap" srcset="assets/images/@2x/role/infiltrating/1@2x.jpg 2x">
+                    <img src="assets/images/role/infiltrating/2.jpg" alt="Someone punching and destroying a robotic bee" srcset="assets/images/@2x/role/infiltrating/2@2x.jpg 2x">
                 </div>
                 <p class="paragraph infiltrating__paragraph">As an Infiltrator, you set traps, you destroy them with your bare hands or with weapons.</p>
 
                 <div class="explaination__images">
-                    <img src="assets/images/role/infiltrating/3.jpg" alt="">
+                    <img src="assets/images/role/infiltrating/3.jpg" alt="Someone infiltrating a mega corporation of robotic bee and leaking data" srcset="assets/images/@2x/role/infiltrating/3@2x.jpg 2x">
                 </div>
                 <p class="paragraph infiltrating__paragraph">But if you want to go further, you infiltrate mega corporations and sabotage. Leak data, expose them. Make an impact on the world.</p>
             </div>
