--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Who We Are - KEB</title>
+  <title>WHO WE ARE - KEB</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="description" content="">
-  <!-- Meta Partage -->
-  <!-- Favicon -->
+  <meta name="description" content="Homepage of KEB, a movement against the E-BEES, the robotic bees">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Benjamin Brihaye, Benjamin, Brihaye, Web Design, Web, Code, Coding, benjaminbrihaye.com, benjaminbrihaye.be, portfolio, student, web design student, web design, web developer, web development, web designer, web developer student, web development student, keb, ebees, ebee, kill e-bees, movement, robotic, bee, bees">
+  <meta name="author" content="Benjamin Brihaye">
+
+  <meta property="og:site_name" content="benjaminbrihaye.com/projets/designfiction/">
+  <meta property="og:title" content="WHO WE ARE - KEB">
+  <meta property="og:description" content="Homepage of KEB, a movement against the E-BEES, the robotic bees">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.benjaminbrihaye.com/projets/designfiction/">
+  <meta property="og:image" content="https://www.benjaminbrihaye.com/projets/designfiction/favimage/whoweare.png">
+  <meta property="og:image:width" content="1800">
+  <meta property="og:image:height" content="945">
+
+  <link rel="icon" type="image/x-icon" href="./assets/images/keb-logo.svg">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
