--- a/src/joinus.html
+++ b/src/joinus.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>JOIN US - KEB</title>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>JOIN US - KEB</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <meta name="description" content="">
-  <!-- Meta Partage -->
-  <!-- Favicon -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Join form to become a member of KEB, a movement against the E-BEES, the robotic bees">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Benjamin Brihaye, Benjamin, Brihaye, Web Design, Web, Code, Coding, benjaminbrihaye.com, benjaminbrihaye.be, portfolio, student, web design student, web design, web developer, web development, web designer, web developer student, web development student, keb, ebees, ebee, kill e-bees, movement, robotic, bee, bees">
+    <meta name="author" content="Benjamin Brihaye">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <meta property="og:site_name" content="benjaminbrihaye.com/projets/designfiction/joinus.html">
+    <meta property="og:title" content="JOIN US - KEB">
+    <meta property="og:description" content="Join form to become a member of KEB, a movement against the E-BEES, the robotic bees">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.benjaminbrihaye.com/projets/designfiction/joinus.html">
+    <meta property="og:image" content="https://www.benjaminbrihaye.com/projets/designfiction/favimage/joinus.png">
+    <meta property="og:image:width" content="1800">
+    <meta property="og:image:height" content="945">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./assets/images/keb-logo.svg">
 
-  <link rel="stylesheet" href="styles/app.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="scripts/app.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/app.css">
+
+    <script src="scripts/app.js" defer></script>
 </head>
 <body>
 
