--- a/src/joinus.html
+++ b/src/joinus.html
@@ -47,7 +47,6 @@
                 <li><a href="index.html">WHO WE ARE</a></li>
                 <li><a href="ourfight.html">OUR FIGHT</a></li>
                 <li><a href="yourjob.html">YOUR ROLE</a></li>
-                <li><a href="agenda.html">AGENDA</a></li>
                 <li class="active"><a href="#">JOIN US</a></li>
             </ul>
         </nav>
@@ -89,7 +88,7 @@
                 <div class="formInput form__gender">
                     <label for="gender">Gender</label>
                     <select id="gender" name="gender" required>
-                        <option value="select" selected>Select an option</option>
+                        <option value="" disabled selected>Select an option</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                         <option value="nb">Non-Binary</option>
@@ -101,7 +100,7 @@
                 <div class="formInput form__role">
                     <label for="role">Role wanted</label>
                     <select name="role" id="role" required>
-                        <option value="select">Select an option</option>
+                        <option value="" disabled selected>Select an option</option>
                         <option value="manifesting">Manifester</option>
                         <option value="observing">Observing</option>
                         <option value="hacking">Hacker</option>
